--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,6 @@ task wrapper(type: Wrapper) {
 
 dependencies {
     compile "com.robo4j:robo4j-core:${robo4jVersion}"
+    compile "com.robo4j:robo4j-socket-http:${robo4jVersion}"
     compile "com.robo4j:robo4j-units-rpi:${robo4jVersion}"
 }
