--- a/libraries.gradle
+++ b/libraries.gradle
@@ -1,27 +1,25 @@
 /*
- * Copyright (C) 2016-2017. Miroslav Wengner, Marcus Hirt
- * This libraries.gradle  is part of robo4j.
- * module: robo4j-rpi-lcd-example
- *
- * robo4j is free software: you can redistribute it and/or modify
+ * Copyright (c) 2014, 2018, Marcus Hirt, Miroslav Wengner
+ * 
+ * Robo4J is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
- * robo4j is distributed in the hope that it will be useful,
+ * Robo4J is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
- * along with robo4j .  If not, see <http://www.gnu.org/licenses/>.
+ * along with Robo4J. If not, see <http://www.gnu.org/licenses/>.
  */
 
 println "configure $project"
 
 ext {
-    robo4jVersion = "alpha-0.4"
-    gradleVersion = "4.7"
+    robo4jVersion = "0.5-SNAPSHOT"
+    gradleVersion = "5.1"
     pi4jVersion = "1.1"
     junitVersion = "4.12"
     hamcrestAllVersion = "1.3"
